# python_chatbot

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: config.js  index.html  main.js
client/src/assets/: styles.css
server/: .env.example  .gitignore  build.sh  pyproject.toml  requirements.txt  tutorial.py
server/src/: main.py  settings.py
server/src/controllers/: chat_controller.py
server/src/schemas/: __init__.py  prompt_schema.py
server/src/services/: __init__.py  chat_services.py
